--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint --fix --ext .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "coverage": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -25,18 +26,23 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.0.1",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.6.2",
+    "react-test-render": "^1.1.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
