--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint --fix --ext .",
-    "test": "jest",
-    "coverage": "jest --collect-coverage"
+    "test": "jest --collect-coverage",
+    "coverage": "yarn run test"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.0.2",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
@@ -54,6 +55,8 @@
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
     "dotenv": "^16.0.0",
+    "mocha": "^9.2.2",
+    "nyc": "^15.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
