--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,19 +3,30 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
-      "js":true
+      "js": true
     },
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "prettier"],
   "rules": {
+    "prettier/prettier": ["error"],
     "react/jsx-no-undef": "off",
     "react/jsx-filename-extension": "off",
+    "react/jsx-wrap-multilines": "off",
     "no-undef": "off"
   }
 }
+
+
+
+
+
+
+
+
+
