--- a/package.json
+++ b/package.json
@@ -22,26 +22,31 @@
   "homepage": "https://github.com/atlp-rwanda/cabal-bn-fe#readme",
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.0.2",
+    "babel-jest": "^28.0.3",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.0.1",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.0.2",
     "prettier": "^2.6.2",
     "react-test-render": "^1.1.2",
     "style-loader": "^3.3.1",
@@ -50,10 +55,15 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@mui/styles": "^5.6.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/user-event": "^14.1.1",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
@@ -64,6 +74,7 @@
     "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "v8-to-istanbul": "^9.0.0"
   }
 }
