--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
     "dotenv": "^16.0.0",
+    "file-loader": "^6.2.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "react": "^18.0.0",
