--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "socket.io-client": "^4.5.1",
     "ts-jest": "^28.0.2",
     "v8-to-istanbul": "^9.0.0",
     "yup": "^0.32.11"
