--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "expect": "^28.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.0.1",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.0",
+    "moxios": "^0.4.0",
     "prettier": "^2.6.2",
     "react-test-render": "^1.1.2",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
@@ -65,19 +68,30 @@
     "@mui/material": "^5.6.3",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.6.4",
+    "@mui/x-data-grid": "^5.10.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.20.0",
     "bootstrap": "^5.1.3",
-    "dotenv": "^16.0.0",
+    "chart.js": "^3.7.1",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "google-map-react": "^2.1.10",
     "history": "^5.3.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
+    "react-charts": "^3.0.0-beta.36",
     "react-dom": "^18.0.0",
+    "react-draggable": "^4.4.5",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
@@ -92,5 +106,10 @@
     "sass-loader": "^12.6.0",
     "ts-jest": "^28.0.2",
     "v8-to-istanbul": "^9.0.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
