--- a/package.json
+++ b/package.json
@@ -64,16 +64,25 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/styles": "^5.6.2",
+    "@mui/system": "^5.6.4",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "file-loader": "^6.2.0",
+    "google-map-react": "^2.1.10",
+    "history": "^5.3.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
+    "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-styled-carousel": "^0.5.1",
     "react-test-renderer": "^18.1.0",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
