--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,9 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-transform-runtime"],
   "env": {
     "test": {
       "plugins": ["@babel/plugin-syntax-jsx"]
     }
-  },
-  "plugins": [
-    ["@babel/plugin-transform-runtime",       
-    {         
-      "regenerator": true       
-    }]
-]
+  }
 }
