--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "editor.tabSize": 2,
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "eslint.run": "onType",
+  "prettier.trailingComma": "all"
 }
