--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "lint": "eslint --fix --ext .",
+    "lint": "npx eslint --fix .",
     "test": "jest --collect-coverage",
     "coverage": "yarn run test"
   },
@@ -34,6 +34,7 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.5.0",
@@ -46,7 +47,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.0.1",
     "jest-dom": "^4.0.0",
-    "jest-environment-jsdom": "^28.0.2",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.6.2",
     "react-test-render": "^1.1.2",
     "style-loader": "^3.3.1",
@@ -55,6 +56,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/runtime": "^7.17.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
