--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "^13.2.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.0.3",
     "babel-loader": "^8.2.5",
@@ -60,6 +60,7 @@
     "@babel/runtime": "^7.17.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/styles": "^5.6.2",
@@ -74,9 +75,13 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-test-renderer": "^18.1.0",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "ts-jest": "^28.0.2",
     "v8-to-istanbul": "^9.0.0"
   }
 }
