ft/profile page

--- a/jest.config.json
+++ b/jest.config.json
@@ -8,5 +8,7 @@
     "\\.[jt]sx?$": "babel-jest",
     "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "./fileTransformer.js"
   },
-  "testEnvironment": "jsdom"
+  "testEnvironment": "jsdom",
+  "resolver": "./resolver.js",
+  "setupFilesAfterEnv": ["./setupTests.js"]
 }
