--- a/package.json
+++ b/package.json
@@ -61,20 +61,25 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/runtime": "^7.17.9",
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.9",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.6.4",
     "@mui/x-data-grid": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "country-list-js": "^3.1.7",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
@@ -92,6 +97,7 @@
     "react-charts": "^3.0.0-beta.36",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
+    "react-hook-form": "^7.31.1",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
@@ -101,15 +107,12 @@
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "ts-jest": "^28.0.2",
-    "v8-to-istanbul": "^9.0.0"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
+    "v8-to-istanbul": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
