--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@hookform/resolvers": "^2.8.9",
+    "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
@@ -97,11 +97,12 @@
     "react-charts": "^3.0.0-beta.36",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
-    "react-hook-form": "^7.31.1",
+    "react-hook-form": "^7.31.2",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-simple-image-slider": "^2.4.1",
     "react-styled-carousel": "^0.5.1",
     "react-test-renderer": "^18.1.0",
     "react-toastify": "^9.0.1",
@@ -115,5 +116,11 @@
     "ts-jest": "^28.0.2",
     "v8-to-istanbul": "^9.0.0",
     "yup": "^0.32.11"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "v8-to-istanbul": "^9.0.0"
   }
 }
