--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
+  "coveragePathIgnorePatterns": ["<rootDir>/tests/dummyData/"],
   "verbose": true,
   "collectCoverage": true,
   "coverageReporters": ["lcov", "text"],
