--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-charts": "^3.0.0-beta.36",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
+    "react-loading-dot": "^1.0.6",
     "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
